--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 <%= render 'shared/topmenu' %>
 
 <div class="container">
+
+<%= render 'shared/error_messages' %>
+
   <div class="row">
     <div class="col-md-9">
       <%= yield %>
