--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,24 @@
-<h2>Sign up</h2>
+<h3>Sign up</h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name, role: "form")) do |f| %>
     <%= devise_error_messages! %>
 
-    <div><%= f.label :username %>
+    <div class="form-group"><%= f.label :name %>
       <br/>
-      <%= f.text_field :username, autofocus: true %></div>
+      <%= f.text_field :name, autofocus: true, class: "form-control" %></div>
 
 
-    <div><%= f.label :email %>
+    <div class="form-group"><%= f.label :email %>
       <br/>
-      <%= f.email_field :email, autofocus: true %></div>
+      <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
 
-    <div><%= f.label :password %>
+    <div class="form-group"><%= f.label :password %>
       <br/>
-      <%= f.password_field :password, autocomplete: "off" %></div>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %></div>
 
-    <div><%= f.label :password_confirmation %>
+    <div class="form-group"><%= f.label :password_confirmation %>
       <br/>
-      <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
 
-    <div><%= f.submit "Sign up" %></div>
+    <div class="form-group"><%= f.submit "Sign up", class: "btn btn-default" %> or <%= render "devise/shared/links" %></div>
 <% end %>
-
-<%= render "devise/shared/links" %>
