--- a/app/views/shared/_topmenu.html.slim
+++ b/app/views/shared/_topmenu.html.slim
@@ -1,6 +1,16 @@
 nav.navbar.navbar-default role="navigation"
   div.container
     = link_to 'Stack Overflow', root_path, class: 'navbar-brand'
-    = link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn navbar-right"
-    button.btn.btn-default.navbar-btn.navbar-right
-      | Sign in
+    - if user_signed_in?
+      ul.nav.navbar-nav.navbar-right
+        li.dropdown
+          a.dropdown-toggle href="#" data-toggle="dropdown"
+            = current_user.name
+            b.caret
+          ul.dropdown-menu
+            li
+              = link_to 'Edit Profile', edit_user_registration_path
+            li
+              = link_to 'Log out', destroy_user_session_path, method: :delete
+    - else
+      = link_to 'Sign in', new_user_session_path, class: "btn btn-default navbar-btn navbar-right" unless current_page?(controller: 'devise/sessions', action: 'new')
