--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -4,13 +4,11 @@
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %></div>
+  <div class="form-group"><%= f.label :password, "New password", class: "sr-only" %><br />
+    <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "New password" %></div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group"><%= f.label :password_confirmation, "Confirm new password", class: "sr-only" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm new password" %></div>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div><%= f.submit "Change my password", class: "btn btn-default" %></div>
 <% end %>
-
-<%= render "devise/shared/links" %>
