--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,10 +3,8 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div class="form-group"><%= f.label :email, class: "sr-only" %><br />
+  <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Email" %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div class="form-group"><%= f.submit "Send me reset password instructions", class: "btn btn-default" %></div>
 <% end %>
-
-<%= render "devise/shared/links" %>
