--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,26 +4,28 @@
     <%= devise_error_messages! %>
 
     <div class="form-group"><%= f.label :name %>
-      <br/>
-      <%= f.text_field :name, autofocus: true, class: "form-control" %></div>
+    <p class="form-control-static"><%= current_user.name %></p>
+    </div>
 
     <div class="form-group"><%= f.label :email %>
-      <br/>
       <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div class="form-group">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="form-group"><%= f.label :password %> <small class="text-muted">(leave blank if you don't want to change it)</small><br/>
-      <%= f.password_field :password, autocomplete: "off", class: "form-control" %></div>
+    <div class="form-group"><%= f.label :password %>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+      <span class="help-block">leave blank if you don't want to change it</span>
+    </div>
 
     <div class="form-group"><%= f.label :password_confirmation %>
-      <br/>
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
 
-    <div class="form-group"><%= f.label :current_password %> <small class="text-muted">(we need your current password to confirm your changes)</small><br/>
-      <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %></div>
+    <div class="form-group"><%= f.label :current_password %>
+      <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+      <span class="help-block">we need your current password to confirm your changes</span>
+    </div>
 
     <div class="form-group"><%= f.submit "Update", class: "btn btn-primary" %></div>
 <% end %>
@@ -31,5 +33,3 @@
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: {confirm: "Are you sure?"}, method: :delete, class: "btn btn-danger" %></p>
-
-<%= link_to "Back", :back %>
