Problem with deprecations warning is finish

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
 
 <%= render 'shared/topmenu' %>
 
+
+
 <div class="container">
+  <%= render 'shared/submenu'  %>
 
   <%= render 'shared/error_messages' %>
 
