Green test — User can ask questions

--- a/app/views/shared/_submenu.html.slim
+++ b/app/views/shared/_submenu.html.slim
@@ -2,4 +2,4 @@
   a href="#" Questions
   a href="#" Tags
   a href="#" Users
-  =link_to 'Ask Question', new_question_path, class: "btn btn-info btn-embossed pull-right" unless current_page?(controller: "questions", action: "new")
+  =link_to 'Ask Question', new_question_path, class: "btn btn-info btn-embossed pull-right" unless current_page?(url_for(:controller => '/questions', :action => 'new'))
