Index with recent questions is Done

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,11 @@
+<% title @title %>
+
 <div class="high_box">
   <p class="text-success">Main part</p>
   <hr/>
+
+  <%= render 'question_summary', locals: {questions: @questions} %>
+
 </div>
 
 <% content_for :sidebar do %>
