Tasks are done: User can click a title and go to show page; User sees recent questions.

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -3,3 +3,18 @@
 
 .high_footer
   min-height: 170px
+
+.summarycount
+  color: #808185
+  font-size: 300%
+  font-weight: bold
+.question-summary
+  border-bottom: 1px solid #eaeaea
+.asked_by
+
+.summary
+
+
+
+#questions-count p, div
+  line-height: 1
