Tests of Questions CRUD are green

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,7 +10,7 @@
 
 <% content_for :sidebar do %>
     <div class="module" id="questions-count">
-      <div class="summarycount"><%= Question.all.length %></div>
+      <div class="summarycount"><%= Question.count %></div>
       <p>questions</p>
     </div>
 
