User list, flash notices, root index — all green

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,7 +4,7 @@
   <p>All Questions</p>
   <hr/>
 
-  <%= render 'question_summary', locals: {questions: @questions} %>
+  <%= render 'questions/question_summary', locals: {questions: @questions} %>
 
 </div>
 
