--- a/app/views/shared/_submenu.html.slim
+++ b/app/views/shared/_submenu.html.slim
@@ -1,5 +1,5 @@
 #submenu
   = link_to 'Questions', questions_path
   a href="#" Tags
-  a href="#" Users
+  = link_to 'Users', users_path
   =link_to 'Ask Question', new_question_path, class: "btn btn-info btn-embossed pull-right" unless current_page?(url_for(:controller => '/questions', :action => 'new'))
