Welcome tests is green

--- a/app/assets/stylesheets/basic-css.css.sass
+++ b/app/assets/stylesheets/basic-css.css.sass
@@ -1,3 +1,5 @@
+.container
+  min-width: 768px
 #main
   min-height: 700px
 
@@ -7,3 +9,14 @@
     margin-right: 20px
     &:last-child
       margin-right: 0
+
+.btn-carrot
+  color: #ffffff
+  background-color: #E67E22
+  &:hover
+    background-color: #E67E22
+.btn-concrete
+  color: #ffffff
+  background-color: #95A5A6
+  &:hover
+    background-color: #E67E22
