--- a/app/views/shared/_error_messages.html.slim
+++ b/app/views/shared/_error_messages.html.slim
@@ -1,6 +1,8 @@
 -flash.each do |key, value|
   - if key == 'notice'
     - key = 'success'
+  - elsif key == 'alert'
+    - key = 'warning'
   div class= "alert alert-#{key}"
     button.close type="button" data-dismiss="alert" aria-hidden="true"
       | &times;
