--- a/app/views/shared/_topmenu.html.slim
+++ b/app/views/shared/_topmenu.html.slim
@@ -1,20 +1,20 @@
-nav.navbar.navbar-default role="navigation"
-  div.container
+.container
+  nav.navbar.navbar-inverse role="navigation"
     = link_to 'Stack Overflow', root_path, class: 'navbar-brand'
-    - if user_signed_in?
-      ul.nav.navbar-nav.navbar-right
-        li.dropdown
-          a.dropdown-toggle href="#" data-toggle="dropdown"
-            = current_user.name
-            b.caret
-          ul.dropdown-menu
-            li
-              = link_to 'Edit Profile', edit_user_registration_path
-            li
-              = link_to 'Log out', destroy_user_session_path, method: :delete
-    - else
-      - unless current_page?(controller: 'devise/sessions', action: 'new') or current_page?(controller: 'devise/registrations', action: 'new')
-        button.btn.btn-default.navbar-btn.navbar-right data-target="#signin_modal" data-toggle="modal"
-          | Sign in
-        = render 'devise/sessions/modal'
-
+    .collapse.navbar-collapse
+      - if user_signed_in?
+        ul.nav.navbar-nav.navbar-right
+          li.dropdown
+            a.dropdown-toggle href="#" data-toggle="dropdown"
+              = current_user.name
+              b.caret
+            ul.dropdown-menu
+              li
+                = link_to 'Edit Profile', edit_user_registration_path
+              li
+                = link_to 'Log out', destroy_user_session_path, method: :delete
+      - else
+        - unless current_page?(controller: 'devise/sessions', action: 'new') or current_page?(controller: 'devise/registrations', action: 'new')
+            button.btn.btn-default.navbar-btn.navbar-right data-target="#signin_modal" data-toggle="modal"
+              | Sign in
+            = render 'devise/sessions/modal'
