Some decorations is done

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -1,3 +1,17 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.spoiler-body
+  display: none
+
+
+.spoiler-btn
+  cursor: pointer
+
+.unhappy
+  margin-top: 100px
+  text-align: center
+
+.center
+  text-align: center
