Seeds db, profile link, green

--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -6,3 +6,5 @@ h4
   = f.input :display_name
   = f.input :facebook_id
   = f.button :submit, class: 'pull-right btn-embossed btn-primary'
+div.unhappy
+  = link_to 'Edit registration data', edit_user_registration_path
