--- a/app/views/shared/_topmenu.html.slim
+++ b/app/views/shared/_topmenu.html.slim
@@ -2,19 +2,19 @@
   nav.navbar.navbar-inverse role="navigation"
     = link_to 'Stack Overflow', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
-      - if user_signed_in?
-        ul.nav.navbar-nav.navbar-right
+      ul.nav.navbar-nav.navbar-right
+        - if user_signed_in?
           li.dropdown
             a.dropdown-toggle href="#" data-toggle="dropdown"
               = current_user.name
-              b.caret
             ul.dropdown-menu
               li
-                = link_to 'Edit Profile', edit_user_registration_path
+                = link_to 'Edit Profile', profile_path
               li
                 = link_to 'Log out', destroy_user_session_path, method: :delete
-      - else
-        - unless current_page?(controller: 'devise/sessions', action: 'new') or current_page?(controller: 'devise/registrations', action: 'new')
-            button.btn.btn-default.navbar-btn.navbar-right data-target="#signin_modal" data-toggle="modal"
-              | Sign in
-            = render 'devise/sessions/modal'
+        - else
+          - unless current_page?(controller: 'devise/sessions', action: 'new') or current_page?(controller: 'devise/registrations', action: 'new')
+            li
+              a.navbar-right data-target="#signin_modal" data-toggle="modal"
+                  span.fui-lock
+              = render 'devise/sessions/modal'
