Acceptance test with user profile is green

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -13,7 +13,8 @@ h4 Edit #{current_user.name}'s registration data:
   = f.button :submit, class: 'btn-wide pull-right btn-embossed'
 
 div.unhappy
-  a.spoiler-btn Unhappy?
+  a.spoiler-btn href="#"
+    | Unhappy?
   br
   br
   .spoiler-body
