--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -18,6 +18,15 @@
       <div class="summarycount"><%= Question.count %></div>
       <p>questions</p>
     </div>
+
+    <div class="tile">
+      asd
+      asdasd
+      asdasd
+      asdasd
+      asdasd
+      asdas
+    </div>
 <% end %>
 
 <% end %>
