decorations, tests, titles, green

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%- title "New registration" %>
+
 <h3>Sign up</h3>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name, role: "form")) do |f| %>
