--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,3 +1,5 @@
+- title "Edit #{current_user.name}'s registration"
+
 h4 Edit #{current_user.name}'s registration data:
 
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, class: 'form-horizontal'}, wrapper: :horizontal_form) do |f|
