--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,16 +1,4 @@
-= form_for @question, role: "form" do |f|
-  - if @question.errors.any?
-    #error_explanation
-      h2= pluralize(@question.errors.count, "error")
-        | prohibited this post from being saved:
-      ul
-        - @question.errors.full_messages.each do |msg|
-          li= msg
-  .form-group
-    = f.label :title
-    = f.text_field :title, class: "form-control"
-  .form-group
-    = f.label :body
-    = f.text_area :body, class: "form-control"
-
-  = f.submit "Create Question", class: "btn btn-info"
+= simple_form_for @question, role: "form" do |f|
+    = f.input :title
+    = f.input :body
+    = f.submit class: "btn btn-info"
