--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,2 +1,20 @@
-p= @user.name
-p= @user.profile.display_name
+- title @user.name
+
+.user_profile
+  h4
+    = @user.name
+    | 's profile
+
+  .tile.user_avatar
+
+  .user_info
+    dl
+      - if @user.profile.display_name
+        dt Name
+        dd = @user.profile.display_name
+      - if @user.profile.age
+        dt Age
+        dd = @user.profile.age
+      - if @user.profile.facebook_id
+        dt Facebook
+        dd = @user.profile.facebook_id
