Stats is ready, green

--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -10,3 +10,6 @@
         =' time_ago_in_words q.created_at
         ' ago by
         = q.user.name
+      small.view_counter
+        ' Views —
+        = q.unique_views
