--- a/app/views/shared/_submenu.html.slim
+++ b/app/views/shared/_submenu.html.slim
@@ -1,6 +1,7 @@
 #submenu
   .row
     .col-sm-8.col-md-9.col-xs-8
+      / TODO Допилить подсветку активной ссылки меню
       = link_to 'Questions', questions_path, class: "btn btn-xs #{current_page?(questions_path) ? 'btn-carrot' : 'btn-concrete'}"
       = link_to 'Tags', '#', class: "btn btn-xs btn-concrete"
       = link_to 'Users', users_path, class: "btn btn-xs #{current_page?(users_path) ? 'btn-carrot' : 'btn-concrete'}"
