Featured tests have done, green

--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -3,6 +3,8 @@
     .summary
       h4
         = link_to q.title, q, class: "question-hyperlink"
+        - if q.featured?
+          span.fui-heart
       .excerpt
         p= q.body.html_safe
       small.asked_by
