--- a/app/views/questions/_sort_panel.html.slim
+++ b/app/views/questions/_sort_panel.html.slim
@@ -1,3 +1,3 @@
 .sort_panel
   = link_to 'Recent', questions_path, class: 'btn btn-xs btn-info active'
-  = link_to 'Featured', featured_questions_path, class: 'btn btn-xs btn-info'
+  = link_to 'Featured', sortable_questions_path(sort_by: 'featured'), class: 'btn btn-xs btn-info'
