--- a/app/views/shared/_submenu.html.slim
+++ b/app/views/shared/_submenu.html.slim
@@ -1,9 +1,8 @@
 #submenu
   .row
     .col-sm-8.col-md-9.col-xs-8
-      / TODO Допилить подсветку активной ссылки меню
-      = link_to 'Questions', questions_path, class: "btn btn-xs #{current_page?(questions_path) ? 'btn-carrot' : 'btn-concrete'}"
-      = link_to 'Tags', '#', class: "btn btn-xs btn-concrete"
-      = link_to 'Users', users_path, class: "btn btn-xs #{current_page?(users_path) ? 'btn-carrot' : 'btn-concrete'}"
+      = link_to 'Questions', questions_path, class: "btn btn-md #{controller?('questions') ? 'btn-carrot' : 'btn-concrete'}"
+      = link_to 'Tags', '#', class: "btn btn-md btn-concrete"
+      = link_to 'Users', users_path, class: "btn btn-md #{current_page?(users_path) ? 'btn-carrot' : 'btn-concrete'}"
     .col-sm-4.col-md-3.col-xs-4
       =link_to 'Ask Question', new_question_path, class: "btn #{current_page?(new_question_path) ? 'btn-carrot' : 'btn-concrete'} btn-embossed btn-block"
