Tags, Edit Question, refactoring, green

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -14,7 +14,12 @@
 
 .summary
 
-
+.question_body
+  textarea
+    resize: vertical
 
 #questions-count p, div
   line-height: 1
+
+.edit_question_icon
+  margin-left: 20px
