--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -5,8 +5,12 @@
         = link_to q.title, q, class: "question-hyperlink"
         - if q.featured?
           span.fui-heart
+        - if q.user == current_user
+          small
+            = link_to "<span class='fui-new'></span>".html_safe, edit_question_path(q), alt: 'Edit Question', class: 'edit_question_icon'
       .excerpt
         p= q.body.html_safe
+        p= raw q.tag_list.map { |t| link_to t, tag_questions_path(t) }.join(', ')
       small.asked_by
         ' asked
         =' time_ago_in_words q.created_at
