--- a/app/assets/stylesheets/basic-css.css.sass
+++ b/app/assets/stylesheets/basic-css.css.sass
@@ -1,4 +1,4 @@
-.container
+.container, nav
   min-width: 768px
 #main
   min-height: 700px
@@ -23,5 +23,5 @@
 .view_counter
   float: right
 .sort_panel
-  a
-    margin-right: 10px
+  li
+    float: right
