--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -23,3 +23,28 @@
 
 .edit_question_icon
   margin-left: 20px
+
+.index_tag_list
+  a.tag
+    color: #b2bac2
+    margin-right: 10px
+    &:hover
+      color: #5a6772
+
+.tag_cloud
+  line-height: 2em
+  .css1
+    color: #cccccc
+    font-size: 1.0em
+  .css2
+    color: #aaaaaa
+    font-size: 1.2em
+  .css3
+    color: #999999
+    font-size: 1.4em
+  .css4
+    color: #666666
+    font-size: 1.6em
+  .css5
+    color: #333333
+    font-size: 1.8em
