--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -10,7 +10,8 @@
             = link_to "<span class='fui-new'></span>".html_safe, edit_question_path(q), alt: 'Edit Question', class: 'edit_question_icon'
       .excerpt
         p= q.body.html_safe
-        p= raw q.tag_list.map { |t| link_to t, tag_questions_path(t) }.join(', ')
+        .index_tag_list
+          = raw (q.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "tag"}.join(" ")
       small.asked_by
         ' asked
         =' time_ago_in_words q.created_at
