--- a/app/views/questions/_sort_panel.html.slim
+++ b/app/views/questions/_sort_panel.html.slim
@@ -1,5 +1,6 @@
-.sort_panel
-  = sort_link 'Recent', questions_path
-  = sort_link 'Featured', featured_questions_path
+ul.nav.nav-tabs.sort_panel
+  li.disabled
+    a href="#" Unanswered
   = sort_link 'Popular', popular_questions_path
-  = link_to 'Unanswered', '#', class: "btn btn-xs btn-info disabled"
+  = sort_link 'Featured', featured_questions_path
+  = sort_link 'Recent', questions_path
