--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -8,16 +8,71 @@
   color: #808185
   font-size: 300%
   font-weight: bold
+
+
+// Questions on index pages
+
 .question-summary
   border-bottom: 1px solid #eaeaea
-.asked_by
+  overflow: hidden
+  padding: 11px 0
+  width: 100%
+  float: left
 
-.summary
+.cp
+  cursor: pointer
+
+.narrow
+  .votes
+    background: transparent
+    float: left
+    margin: 0 3px 0 0
+    padding: 5px
+    width: 38px
+    height: 38px
+    text-align: center
+
+  .mini-counts
+    height: 25px
+    font-size: 160%
+    font-weight: normal
+
+  .status
+    float: left
+    margin: 0 3px 0 0
+    padding: 5px
+    width: 48px
+    height: 38px
+    text-align: center
+
+  .narrow .views
+    float: left
+    margin: 0 7px 0 0
+    padding: 5px 0 5px 4px
+    width: 40px
+    height: 38px
+    text-align: center
+
+.question_box
+  width: 550px
+  float: left
+  h3
+    size: 130%
+    font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif
+    font-size: 110%
+    font-weight: bold
+    margin-bottom: 5px
+    line-height: 1.3
+
+
+// -----------------
 
 .question_body
   textarea
     resize: vertical
 
+
+// -----------------
 #questions-count p, div
   line-height: 1
 
