Answer is ready with Rspec, green

--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -5,7 +5,8 @@
         .mini-counts 0
         div votes
       .status.unanswered
-        .mini-counts 0
+        .mini-counts
+          = q.answers.count
         div answers
       .views
         .mini-counts 2
