--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,21 +5,17 @@ p
   ' Views by IP:
   = @question.impressionist_count
 
-- if @question.answers.any?
-  p
-    = pluralize(@question.answers.count, 'answer')
-    | :
+.answers
+  - if @question.answers.any?
+    = render 'questions/answers'
+  - else
+    | This question has not been answered yet.
 
-  ul
-    = render @question.answers
-- else
-  | This question has not been answered yet.
-
-
-- if signed_in?
-  = render 'answers/answer_form'
-- else
-  ' Please
-  =' link_to 'login', '#', data: {target: "#signin_modal", toggle: "modal"}
-  | to post answer.
+.answer_form
+  - if signed_in?
+    = render 'answers/answer_form'
+  - else
+    ' Please
+    =' link_to 'login', '#', data: {target: "#signin_modal", toggle: "modal"}
+    | to post answer.
 
