--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -12,57 +12,40 @@
 
 // Questions on index pages
 
-.question-summary
+.question_list_item
   border-bottom: 1px solid #eaeaea
   overflow: hidden
-  padding: 11px 0
-  width: 100%
+  padding: 30px 0
+
+
+.question_info
+  margin-right: 10px
+  width: 125px
+  height: 50px
   float: left
-
-.cp
-  cursor: pointer
-
-.narrow
-  .votes
-    background: transparent
-    float: left
-    margin: 0 3px 0 0
-    padding: 5px
-    width: 38px
-    height: 38px
-    text-align: center
-
-  .mini-counts
-    height: 25px
-    font-size: 160%
-    font-weight: normal
-
-  .status
-    float: left
-    margin: 0 3px 0 0
-    padding: 5px
-    width: 48px
-    height: 38px
-    text-align: center
-
-  .narrow .views
-    float: left
-    margin: 0 7px 0 0
-    padding: 5px 0 5px 4px
-    width: 40px
-    height: 38px
-    text-align: center
+  font-size: 10px
+  text-align: center
 
 .question_box
-  width: 550px
+  width: 80%%
   float: left
+  position: relative
   h3
-    size: 130%
-    font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif
-    font-size: 110%
-    font-weight: bold
-    margin-bottom: 5px
-    line-height: 1.3
+    margin: 0
+    font-size: 20px
+    font-weight: normal
+    margin-bottom: 10px
+    small
+      a
+        color: gainsboro
+
+.index_tag_list
+  a
+    border: 1px solid
+    color: lightgray
+    &:hover
+      color: #000000
+
 
 
 // -----------------
@@ -79,12 +62,6 @@
 .edit_question_icon
   margin-left: 20px
 
-.index_tag_list
-  a.tag
-    color: #b2bac2
-    margin-right: 10px
-    &:hover
-      color: #5a6772
 
 .tag_cloud
   line-height: 2em
