--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -1,6 +1,6 @@
 - @questions.each do |q|
-  .narrow.question-summary id="question-summary-#{q.id}"
-    .cp
+  .question_list_item id="question-summary-#{q.id}"
+    .question_info
       .votes
         .mini-counts 0
         div votes
@@ -12,6 +12,7 @@
         .mini-counts
           = q.unique_views
         div views
+
     .question_box
       h3
         = link_to q.title, q, class: "question-hyperlink"
@@ -21,9 +22,8 @@
           small
             = link_to "<span class='fui-new'></span>".html_safe, edit_question_path(q), alt: 'Edit Question', class: 'edit_question_icon'
       .excerpt
-        p= q.body.html_safe
         .index_tag_list
-          = raw (q.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "tag"}.join(" ")
+          = raw (q.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "btn btn-xs tag"}.join(" ")
       small.asked_by
         ' asked
         =' time_ago_in_words q.created_at
@@ -32,3 +32,4 @@
       small.view_counter
         ' Views —
         = q.unique_views
+  .clearfix
