New design Questions index list

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -32,7 +32,7 @@
     .mini-counts
       font-size: 20px
       margin-bottom: 5px
-      font-weight: bold
+      font-weight: normal
   .status
     width: 50px
   .unanswered
@@ -42,7 +42,7 @@
     color: #ffffff
 
   .views
-    color: gray
+    color: lightslategray
 
 .question_box
   width: 79%
@@ -69,6 +69,8 @@
   a
     border: 1px solid
     color: lightgray
+    float: left
+    margin-right: 5px
     &:hover
       color: #000000
 
