Unanswered sort was done

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -15,7 +15,7 @@
 .question_list_item
   border-bottom: 1px solid #eaeaea
   overflow: hidden
-  padding: 15px 0
+  padding: 11px 0
 
 
 .question_info
@@ -71,6 +71,7 @@
     color: lightgray
     float: left
     margin-right: 5px
+    margin-bottom: 5px
     &:hover
       color: #000000
 
