Refactor sorts Questions

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -46,7 +46,7 @@
 
 .question_box
   width: 79%
-  float: left
+  float: right
   position: relative
   .asked_by
     float: right
@@ -91,6 +91,11 @@
 .edit_question_icon
   margin-left: 20px
 
+.sort_panel
+  margin-bottom: 10px
+  li
+    a
+      color: gray
 
 .tag_cloud
   line-height: 2em
