--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -6,7 +6,7 @@
         div votes
       .status class="#{ q.answers.any? ? 'answered' : 'unanswered'}"
         .mini-counts
-          = q.answers.size
+          = q.answers_count
         div answers
       .views
         .mini-counts
