Feature tests for sort, green

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,5 @@
+<section class="questions_block" >
+
 <%= render 'questions/sort_panel' %>
 
 <%= render 'questions/question_summary', locals: {questions: @questions} %>
@@ -20,3 +22,5 @@
 <% end %>
 
 <% end %>
+
+</section>
