Design, refactorin — answers, user.nick

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -38,7 +38,7 @@
   .unanswered
     color: lightcoral
   .answered
-    background-color: #75845c
+    background-color: #95a5a6
     color: #ffffff
 
   .views
@@ -75,6 +75,60 @@
     &:hover
       color: #000000
 
+
+// -----------------
+.question_show
+  .question_show_title
+    margin-bottom: 30px
+    h3
+      font-size: 30px
+      margin: 0
+      font-weight: normal
+      margin-bottom: 10px
+    .meta
+      .meta_block
+        display: inline
+        color: lightgray
+        margin-right: 20px
+        span
+          margin-right: 7px
+  .question_show_body
+    word-spacing: 3px
+    border-bottom: 2px solid lightgray
+    .question_show_tag_list
+      margin: 20px 0
+      a
+        border: 1px solid
+        color: lightgray
+        //float: none
+        //margin-right: 5px
+        margin-bottom: 5px
+        &:hover
+          color: #000000
+
+// -----------------
+
+.answers
+  word-spacing: 3px
+  margin-top: 10px
+  .answers_header
+    padding-bottom: 10px
+  .answer_item
+    padding: 20px 0 20px 20px
+    border-bottom: 1px solid lightgray
+  .answer_meta
+    padding: 10px 0
+    //margin-bottom: 10px
+    .answer_author
+      display: inline
+    .answer_date
+      float: right
+      display: inline
+      color: lightgray
+      font-size: 12px
+
+.answer_form
+  margin: 20px 0
 
 
 // -----------------
