Add comments to Question

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,12 +10,25 @@
         = link_to @question.user.nick, user_path(@question.user)
       .meta_block
         span.fui-calendar-solid
-        = @question.created_at.to_formatted_s(:long)
+        = @question.created_at.to_formatted_s(:short)
 
   .question_show_body
-    p= raw @question.body
+    = raw @question.body
     .question_show_tag_list
       = raw (@question.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "btn btn-xs tag"}.join(" ")
+    .question_show_comments
+      = link_to "#{!@question.comments.any? ? 'To comment' : pluralize(@question.comments.count, 'comment')} <b class='caret'></b>".html_safe, "#", class: 'spoiler-btn'
+      .spoiler-body
+        .comment_list
+          - if @question.comments.any?
+            = render 'questions/comments'
+        .comment_form
+          - if signed_in?
+            = render 'comments/comment_form'
+          - else
+            ' Please
+            =' link_to 'login', '#', data: {target: "#signin_modal", toggle: "modal"}
+            | to add comment.
 
   .answers
     - if @question.answers.any?
@@ -30,4 +43,3 @@
       ' Please
       =' link_to 'login', '#', data: {target: "#signin_modal", toggle: "modal"}
       | to post answer.
-
