--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -130,6 +130,30 @@
 .answer_form
   margin: 20px 0
 
+// -----------------
+
+.question_show_comments
+  margin-bottom: 20px
+  .comment_list
+    margin: 10px 0
+    background-color: #f6f7f7
+    padding: 15px
+    .comment_item
+      margin: 30px 0
+      &:first-child
+        margin-top: 0
+      &:last-child
+        margin-bottom: 0
+      .comment_meta
+        .comment_author
+          display: inline
+        .comment_date
+          float: right
+          display: inline
+          color: lightgray
+          font-size: 12px
+      .comment_body
+        margin: 10px 0
 
 // -----------------
 
