--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -135,24 +135,26 @@
 .question_show_comments
   margin-bottom: 20px
   .comment_list
+    border-radius: 10px
     margin: 10px 0
     background-color: #f6f7f7
-    padding: 15px
+    //padding: 15px
     .comment_item
-      margin: 30px 0
+      padding: 5px 20px
       &:first-child
-        margin-top: 0
+        padding-top: 20px
       &:last-child
-        margin-bottom: 0
+        padding-bottom: 10px
       .comment_meta
+        font-size: 12px
         .comment_author
           display: inline
         .comment_date
           float: right
           display: inline
           color: lightgray
-          font-size: 12px
       .comment_body
+        font-size: 14px
         margin: 10px 0
 
 // -----------------
