--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,6 +7,6 @@
       = answer.created_at.to_formatted_s(:short)
 
   .answer_body
-    = raw answer.body
+    = raw simple_format(answer.body)
     .question_show_comments
       = render 'comments/comments_list', object: answer
