--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,7 +13,7 @@
         = @question.created_at.to_formatted_s(:short)
 
   .question_show_body
-    = raw @question.body
+    = raw simple_format(@question.body)
     .question_show_tag_list
       = raw (@question.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "btn btn-xs tag"}.join(" ")
     .question_show_comments
