--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,4 @@
-$('.answers').html('<%= j render 'questions/answers' %>');
+$("#answers_qty").html("<%= pluralize(@question.answers.count, 'answer') %>:");
+$(".answers").append('<%= j render "answer", answer: @answer%>');
+
 $('#answer_body').val('');
