User can edit, delete his answers, green

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -119,6 +119,16 @@
   .answer_meta
     padding: 10px 0
     //margin-bottom: 10px
+    .answer_tools
+      //float: right
+      display: inline
+      margin-left: 10px
+      font-size: 14px
+      .tool
+        margin-right: 10px
+        display: inline
+        a
+          color: lightgray
     .answer_author
       display: inline
     .answer_date
