--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,4 +1,7 @@
+<% if @answer.errors.any? %>
+$(".answer_form").html("<%= j render 'answers/answer_form' %>");
+<% else %>
 $("#answers_qty").html("<%= pluralize(@question.answers.count, 'answer') %>:");
 $(".answers").append('<%= j render "answer", answer: @answer%>');
-$(".answer_form").html("<%= j render 'answers/answer_form' %>");
 $('#answer_body').val('');
+<% end %>
