--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,10 +1,12 @@
-.comment_item
+.comment_item id="comment-#{comment.id}"
   .comment_meta
     .comment_author
       = link_to comment.user.nick, user_path(comment.user)
       | :
     .comment_date
       = comment.created_at.to_formatted_s(:short)
+    .tools
+      = link_to 'Edit', edit_comment_path(comment), remote: true
 
   .comment_body
     = raw comment.body
